--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ env_logger = {version = "0.11"}
 log = {version = "0.4"}
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
+shellexpand = "3.1"
