ci: Bottles for macos-13 x86

--- a/.github/workflows/build-bottles.yml
+++ b/.github/workflows/build-bottles.yml
@@ -10,8 +10,9 @@ jobs:
     strategy:
       matrix:
         os:
-          - macos-14 # Sonoma
-          - macos-15 # Sequoia
+          - macos-13 # Ventura, x86
+          - macos-14 # Sonoma, arm
+          - macos-15 # Sequoia, arm
     runs-on: ${{ matrix.os }}
 
     steps:
